@@ -1046,7 +1046,7 @@ category      = Development
 describe      = Install System
 website       = http://www.jrsoftware.org/isinfo.php
 scrape        = http://www.jrsoftware.org/isdl.php
-version       = isetup-([0-9]\.[0-9]\.[0-9]).exe
+version       = isetup-([0-9]\.[0-9]\.[0-9]+).exe
 download      = http://files.jrsoftware.org/is/#MAJOR_VERSION#/
 filename      = isetup-#VERSION#.exe
 instparam     = /sp- /silent /norestart
